# lumis-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
cookbook/: README.md
cookbook/data-pipeline-investigation/: .env.example  README.md  demo_service.py  investigation_tools.py  pyproject.toml  run_agent.py
cookbook/data-pipeline-investigation/lumis/: lumis.yml  rules.yml
cookbook/data-pipeline-investigation/openaria/: openaria.yml  rules.yml
cookbook/ml-regression-monitoring/: .env.example  README.md  demo_service.py  investigation_tools.py  pyproject.toml  run_agent.py
cookbook/ml-regression-monitoring/knowledge/playbooks/: feature_drift_review.md
cookbook/ml-regression-monitoring/knowledge/runbooks/: feature-drift-investigation.md  model-performance-review.md
cookbook/ml-regression-monitoring/lumis/: lumis.yml  rules.yml
cookbook/ml-regression-monitoring/openaria/: openaria.yml  rules.yml
cookbook/ml-regression-monitoring/synthetic_project/data/: housing_train.csv
cookbook/ml-regression-monitoring/synthetic_project/src/: inference.py  train_regression.py
cookbook/software-delivery-ci-investigation/: .env.example  README.md  demo_service.py  investigation_tools.py  pyproject.toml  run_agent.py
cookbook/software-delivery-ci-investigation/knowledge/playbooks/: dependency_lockfile_refresh.md
cookbook/software-delivery-ci-investigation/knowledge/runbooks/: ci-permission-investigation.md  infrastructure-reference-investigation.md
cookbook/software-delivery-ci-investigation/lumis/: lumis.yml  rules.yml
cookbook/software-delivery-ci-investigation/openaria/: openaria.yml  rules.yml
cookbook/software-delivery-ci-investigation/synthetic_project/.github/workflows/: release.yml
cookbook/software-delivery-ci-investigation/synthetic_project/infra/: main.tf
cookbook/software-delivery-ci-investigation/synthetic_project/src/: checkout.py
docs/: LUMIS_SDK_REFERENCE.md  OPENARIA_CORE_REFERENCE.md  README.md  configuration.md  framework-and-cookbooks.md  releasing.md
tests/: test_cli.py  (+9 more)
(+103 files in other folders)
