[project]
name = "openaria-data-pipeline-cookbook"
version = "0.1.0"
description = "Synthetic data-pipeline investigation cookbook for OpenARIA with opt-in Agno/OpenRouter reasoning."
requires-python = ">=3.11"
dependencies = [
  "agno>=2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=1,<3",
  "openaria",
  "uvicorn>=0.30,<1",
]

[tool.uv.sources]
openaria = { path = "../..", editable = true }
